@@ -1,7 +1,14 @@
 DigIt CHANGE LOG
 ======================
 
-2025/06/18 Completed Profiles method Add from SourceInfo;
+2025/06/19 Moved ConfirmSaveOnClose test to right place;
+           Added Settings.Session write access to solve incorrect XML Save Object (see merge req to lazarus 494);
+           Completed and tested under Linux GetUserName;
+           Use GetUserName in PDF Export;
+           UI Fixes SourceMenu duplicate and Export ActiveControl;
+           Updated languages;
+
+        18 Completed Profiles method Add from SourceInfo;
            Hide or Show Separator whether or not there are Profiles;
            Changed Settings var name and use of Sub Objects Read/Write (see merge req to lazarus 494);
            Wia/Twain Source don't return SourceName in Summary;
